Overhaul testing plan